# python-wasm-parallelism

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy-pages.yml
bench/: report-browser-cli.ts  report-browser.ts  report-common.ts  report.ts  run-bench.ts  schema.ts
bench/results/: browser-2026-07-17.json  node-2026-07-17.json
demos/jupyterlite/: jupyter-lite.json  jupyter_lite_config.json
docs/architecture/: dask-scheduler-design.md  dask-vs-multiprocessing.md  multiprocessing-shim-design.md
docs/benchmarks/: browser-benchmarks.md  node-benchmarks.md
docs/notes/: phase-01-results.md  phase-02-results.md  phase-04-results.md  phase-05-results.md
docs/research/: dask-schedulers.md  index.md  multiprocessing-on-wasm.md  (+2 more)
e2e/: bench.spec.ts  dask.spec.ts  fixtures.ts  jupyterlite.spec.ts  pool.spec.ts
examples/: node-dask-demo.ts  node-demo.ts
python/: pyproject.toml
python/pyodide_pool/: __init__.py  _bridge.py  _packages.py  loader.py  scheduler.py
python/wasm_multiprocessing/: pyproject.toml
python/wasm_multiprocessing/wasm_multiprocessing/: __init__.py  pool.py
scripts/: build-lite-assets.mjs  build.mjs  bundles.d.mts  bundles.mjs  check-wheel.mjs  make-mn-lakes-data.py  serve-lite.mjs
src/: browser.ts  index.ts
tests/: browser-bundle.test.ts  dask-scheduler.test.ts  helpers.ts  loader.test.ts  multiprocessing.test.ts  pool.test.ts  pyodide-pool-python.test.ts  pyodide-pool.test.ts  pyodide-scheduler.test.ts  pyodide-worker.test.ts
web/: demo-api.ts  index.html  main.ts  tsconfig.json
(+20 files in other folders)
